--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div class="banner_content">
 							<h3 class="text-uppercase">Hell0</h3>
 							<h1 class="text-uppercase">I am Srijani Som</h1>
-							<h5 class="text-uppercase">Application and website developer | Learner | Java Coder |
+							<h5 class="text-uppercase">GFG Vice-Chairperspn | GDSC Community Lead | Application and website developer | Learner | Java Coder |
 								Content Creator</h5>
 							<div class="d-flex align-items-center">
 								<a class="primary_btn" href="https://www.linkedin.com/in/srijani-som/"><span>Know Me</span></a>
